# speech-rate-meter

./: .gitignore  Bus.qml  CMakeLists.txt  CMakeLists.txt.user.4ef733b  LICENSE  README.md  SpeechRateMeter_en_US.ts  android_release.keystore  main.qml  qml.qrc  qtquickcontrols2.conf
3party/FontAwesome/: icons2qml.py
Components/: BottomBar.qml  BottomBarForm.ui.qml  Colors.qml  DoubleSpinBox.qml  qmldir
Components/Buttons/: AnimatedRecordButton.qml  AnimatedRecordButtonForm.ui.qml  DeleteButton.qml  DeleteButtonForm.ui.qml  OpenFileButton.qml  OpenFileButtonForm.ui.qml  PlayButton.qml  PlayButtonForm.ui.qml  RecordButton.qml  RecordButtonForm.ui.qml  SaveResultButton.qml  SaveResultButtonForm.ui.qml  ShowDetailsButton.qml  ShowDetailsButtonForm.ui.qml
Components/FontAwesome/: FontAwesome.qml  FontAwesomeIcon.qml  FontAwesomeIconText.qml  FontAwesomeToolButton.qml  FontAwesomeVariables.qml  qmldir
Pages/Metrics/: MetricsPage.qml  MetricsPageForm.ui.qml
Pages/Recorder/: RecorderPage.qml  RecorderPageForm.ui.qml
Pages/Results/: ResultsPage.qml  ResultsPageForm.ui.qml
Pages/Settings/: SettingsPage.qml  SettingsPageForm.ui.qml
Pages/Welcome/: WelcomePage.qml  WelcomePageForm.ui.qml
android/: AndroidManifest.xml  build.gradle  gradle.properties
src/: applicationconfig.h  backend.cpp  backend.h  backend_settings.cpp  main.cpp  pcm_recorder.cpp  pcm_recorder.h  recorder.cpp  recorder.h  settings.cpp  settings.h
src/qml/: qmlfileinfo.cpp  qmlfileinfo.h  qmlpoint.cpp  qmlpoint.h
